--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ config/secrets.yml
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+#api key- you will never get this (*borat voice)
+.env
