--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,14 @@
 # gem 'pg'
 #
 default: &default
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-  timeout: 5000
 
 development:
   <<: *default
+  adapter: sqlite3
   database: playlisten_development
 
   # The specified database role being used to connect to postgres.
@@ -54,6 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
   database: playlisten_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -77,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
   database: playlisten_production
-  # username: playlisten
-  # password: <%= ENV['PLAYLISTEN_DATABASE_PASSWORD'] %>
+  username: playlisten
+  password: <%= ENV['PLAYLISTEN_DATABASE_PASSWORD'] %>
