--- a/config/database.yml
+++ b/config/database.yml
@@ -77,10 +77,10 @@ test:
 # You can use this database configuration with:
 #
 #   production:
-#     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   adapter: postgresql
   database: playlisten_production
   username: playlisten
